--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@
   .navbar{
     background-color: rgb(211, 203, 202);
     border-radius: 5px;
-    padding: 10px;
+    padding: 15px;
   }
 
   
@@ -58,7 +58,7 @@
   }
 
   .list-nav a{
-    padding: 0 0 5px 0;
+    padding: 0 0 10px 0;
     text-decoration: none;
     color: rgb(73, 70, 70);
 
@@ -72,6 +72,16 @@
   .ux {
     padding: 20px;  
     }
+
+  .sub-container{
+    padding-left: 40px;
+    padding-right: 40px;
+  }
+
+  .resume {
+   text-align: center;
+    
+  }
     
     
 
