--- a/style.css
+++ b/style.css
@@ -68,29 +68,23 @@
 
   .ux-head{
     font-size: 28px;
+    display: flex;
     padding: 20px;
   }
 
   .head-icon{
-    
-    margin-right: 5px;
-
+    padding-right: 20px;
   }
+  
 
   .ux-body{
     font-size: 20px;
-    padding: 0px 20px 0px 20px;
+    padding: 20px;
     text-align: justify;
   }
     
-  .col-sm-1{
-    padding: 20px;
-  }
-
-  .col-sm-11{
-    padding: 20px;
-  }
-
+ 
+ 
   .title{
     font-size: 20px;
     font-weight: bold;
