--- a/style.css
+++ b/style.css
@@ -65,42 +65,26 @@
    
   }
   
-
- 
-  
-
-  
-  
-
-  
   @media only screen and (max-width: 600px) {
-    
-    .ux {
-      margin-left: 10px;  
-      margin-right: 10px;  
-  }
 
-  .sub-container{
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-
-  .ux-head{
-    padding: 0px;
-    margin: 30px 0 10px 0;
-  }
-  
-  .ux-body{
-    padding: 10px;
-    margin: 20px 0 10px 0;
-  }
  
-  .source-items{
-    display: block;
-    
+  .intro{
+    border: 1px solid #f0f0f0;
+    height: 400px;
+    width: 300px;
+    top: 20%;
+    left: 10%;
+    position: fixed;
+    text-align: center;
+    padding: 30px 0px 0px 0px;
   }
-
+  
+  }
+  
   
 
- }
+  
+  
+    
+  
 
