--- a/style.css
+++ b/style.css
@@ -64,7 +64,45 @@
     display: inline;
    
   }
+
+  .article{
+    padding: 60px;
+  }
+
+  .head {
+    display: flex;
+    padding: 0px;
+    margin: 0px;
+  }
   
+  .title{
+    display: list-item;
+    list-style-type: none;
+    margin-left: 20px;
+
+  }
+
+  .main-title{
+    font-weight: bold;
+    font-size: 20px;
+  }
+
+  .sub-title{
+    font-size: 16px;
+    color:#9c9c9c;
+  }
+
+  .content{
+    padding-top: 20px;
+    text-align: justify;
+    font-size: 18px;
+  }
+
+
+
+
+
+
   @media only screen and (max-width: 600px) {
 
  
@@ -79,6 +117,12 @@
     padding: 30px 0px 0px 0px;
   }
   
+  .article{
+    padding: 40px;
+  }
+
+
+
   }
   
   
